fix for gravatar image not fitting in it's spot (#4575)

--- a/client/angular/components/user_avatar/user_avatar.scss
+++ b/client/angular/components/user_avatar/user_avatar.scss
@@ -17,7 +17,9 @@
   text-align: center;
   i { line-height: 28px; }
 }
+
 .user-avatar__img {
+  width: 100%;
   overflow: hidden;
   border-radius: 50%;
 }
